// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`GET /api/conversations — pré-checks antes da listagem > os filtros que a listagem recebe não mudam com o memo > gestor restrito a departamento 1`] = `
{
  "allowedChannelIds": null,
  "channel": undefined,
  "channelIds": undefined,
  "contactId": undefined,
  "cursor": undefined,
  "ids": undefined,
  "noReplyBefore": undefined,
  "ownerId": undefined,
  "ownerIds": undefined,
  "page": 1,
  "painelException": undefined,
  "perPage": 30,
  "search": undefined,
  "sessionExpiresWithinHours": undefined,
  "sessionExpiringConversationIds": undefined,
  "sortBy": undefined,
  "sortOrder": undefined,
  "sources": undefined,
  "stageIds": [],
  "status": undefined,
  "tab": "esperando",
  "tagIds": undefined,
  "todosCategoryTabs": undefined,
  "visibilityWhere": {
    "OR": [
      {
        "assignedToId": "u_manager",
      },
      {
        "departmentId": {
          "in": [
            "dep_1",
          ],
        },
      },
    ],
  },
  "windowState": undefined,
  "withoutOwner": false,
  "withoutSource": false,
}
`;

exports[`GET /api/conversations — pré-checks antes da listagem > os filtros que a listagem recebe não mudam com o memo > operador, fila de entrada 1`] = `
{
  "allowedChannelIds": [
    "ch_1",
  ],
  "channel": undefined,
  "channelIds": undefined,
  "contactId": undefined,
  "cursor": undefined,
  "ids": undefined,
  "noReplyBefore": undefined,
  "ownerId": undefined,
  "ownerIds": undefined,
  "page": 1,
  "painelException": undefined,
  "perPage": 30,
  "search": undefined,
  "sessionExpiresWithinHours": undefined,
  "sessionExpiringConversationIds": undefined,
  "sortBy": undefined,
  "sortOrder": undefined,
  "sources": undefined,
  "stageIds": [],
  "status": undefined,
  "tab": "entrada",
  "tagIds": undefined,
  "todosCategoryTabs": undefined,
  "visibilityWhere": {
    "OR": [
      {
        "OR": [
          {
            "assignedToId": "u_member",
          },
          {
            "assignedToId": null,
          },
        ],
      },
      {
        "assignedToId": null,
        "status": "OPEN",
      },
      {
        "assignedTo": {
          "is": {
            "type": "AI",
          },
        },
        "status": "OPEN",
      },
    ],
  },
  "windowState": undefined,
  "withoutOwner": false,
  "withoutSource": false,
}
`;

exports[`GET /api/conversations/:id/messages — contrato da resposta > extras: outro canal, citação fora da página, template legado, evento, flow 1`] = `
{
  "canReply": true,
  "channel": {
    "id": "ch_1",
    "name": "WhatsApp Vendas",
    "phoneNumber": "+5511999990001",
    "type": "WHATSAPP",
  },
  "channelProvider": "META_CLOUD_API",
  "channels": {
    "ch_1": {
      "id": "ch_1",
      "name": "WhatsApp Vendas",
      "phoneNumber": "+5511999990001",
      "type": "WHATSAPP",
    },
    "ch_2": {
      "id": "ch_2",
      "name": "WhatsApp Suporte",
      "phoneNumber": "+5511999990002",
      "type": "WHATSAPP",
    },
  },
  "hasMore": false,
  "hasOlderTickets": true,
  "messages": [
    {
      "authorType": "human",
      "catalogOrder": null,
      "channelId": "ch_1",
      "content": "Olá, quero saber do curso",
      "createdAt": "2026-09-30T11:00:00.000Z",
      "direction": "in",
      "id": "wamid.m1",
      "mediaUrl": null,
      "messageType": "text",
      "reactions": [],
      "replyToId": null,
      "replyToPreview": null,
      "sendStatus": "sent",
      "senderImageUrl": null,
      "senderName": "Cliente",
      "senderUserId": null,
    },
    {
      "authorType": "human",
      "catalogOrder": null,
      "channelId": "ch_1",
      "content": "Claro! Qual curso?",
      "createdAt": "2026-09-30T11:01:00.000Z",
      "direction": "out",
      "id": "wamid.m2",
      "mediaUrl": null,
      "messageType": "text",
      "reactions": [],
      "replyToId": null,
      "replyToPreview": null,
      "sendStatus": "read",
      "senderImageUrl": "https://cdn.example.test/u_member.png",
      "senderName": "Ana Lima",
      "senderUserId": null,
      "status": "READ",
    },
    {
      "authorType": "human",
      "catalogOrder": null,
      "channelId": "ch_1",
      "content": "Administração",
      "createdAt": "2026-09-30T11:02:00.000Z",
      "direction": "in",
      "id": "wamid.m3",
      "mediaUrl": null,
      "messageType": "text",
      "reactions": [],
      "replyToId": "wamid.m2",
      "replyToPreview": "Claro! Qual curso?",
      "sendStatus": "sent",
      "senderImageUrl": null,
      "senderName": "Cliente",
      "senderUserId": null,
    },
    {
      "authorType": "human",
      "catalogOrder": null,
      "channelId": "ch_1",
      "content": "Segue a grade",
      "createdAt": "2026-09-30T11:03:00.000Z",
      "direction": "out",
      "favoritedByMe": true,
      "id": "wamid.m4",
      "mediaUrl": null,
      "messageType": "text",
      "reactions": [],
      "replyToId": null,
      "replyToPreview": null,
      "sendStatus": "delivered",
      "senderImageUrl": "https://cdn.example.test/u_member.png",
      "senderName": "Ana Lima",
      "senderUserId": null,
      "status": "DELIVERED",
    },
    {
      "authorType": "system",
      "catalogOrder": null,
      "channelId": null,
      "content": "Conversa atribuída a Ana Lima",
      "createdAt": "2026-09-30T11:04:00.000Z",
      "direction": "system",
      "id": "m5",
      "mediaUrl": null,
      "messageType": "event:atribuicao",
      "reactions": [],
      "replyToId": null,
      "replyToPreview": null,
      "sendStatus": "sent",
      "senderImageUrl": null,
      "senderName": "Sistema",
      "senderUserId": null,
    },
    {
      "authorType": "human",
      "catalogOrder": null,
      "channelId": "ch_2",
      "content": "Pelo outro número",
      "createdAt": "2026-09-30T11:10:00.000Z",
      "direction": "in",
      "id": "wamid.x1",
      "mediaUrl": null,
      "messageType": "text",
      "reactions": [],
      "replyToId": null,
      "replyToPreview": null,
      "sendStatus": "sent",
      "senderImageUrl": null,
      "senderName": "Cliente",
      "senderUserId": null,
    },
    {
      "authorType": "human",
      "catalogOrder": null,
      "channelId": "ch_1",
      "content": "Sobre aquilo",
      "createdAt": "2026-09-30T11:11:00.000Z",
      "direction": "in",
      "id": "wamid.x2",
      "mediaUrl": null,
      "messageType": "text",
      "reactions": [],
      "replyToId": "wamid.o1",
      "replyToPreview": null,
      "sendStatus": "sent",
      "senderImageUrl": null,
      "senderName": "Cliente",
      "senderUserId": null,
    },
    {
      "authorType": "human",
      "catalogOrder": null,
      "channelId": "ch_1",
      "content": "Olá! Seja bem-vindo.",
      "createdAt": "2026-09-30T11:12:00.000Z",
      "direction": "out",
      "id": "wamid.x3",
      "mediaUrl": null,
      "messageType": "text",
      "reactions": [],
      "replyToId": null,
      "replyToPreview": null,
      "sendStatus": "sent",
      "senderImageUrl": "https://cdn.example.test/u_member.png",
      "senderName": "Ana Lima",
      "senderUserId": null,
      "status": "SENT",
    },
    {
      "authorType": "system",
      "catalogOrder": null,
      "channelId": null,
      "content": "Conversa transferida",
      "createdAt": "2026-09-30T11:13:00.000Z",
      "direction": "system",
      "id": "x4",
      "mediaUrl": null,
      "messageType": "event:transferencia",
      "reactions": [],
      "replyToId": null,
      "replyToPreview": null,
      "sendStatus": "sent",
      "senderImageUrl": null,
      "senderName": "Carla Dias",
      "senderUserId": "u_manager",
    },
    {
      "authorType": "human",
      "catalogOrder": null,
      "channelId": "ch_1",
      "content": "*Resposta do formulário*
*cpf*: 123",
      "createdAt": "2026-09-30T11:14:00.000Z",
      "direction": "in",
      "id": "wamid.x5",
      "mediaUrl": null,
      "messageType": "text",
      "reactions": [],
      "replyToId": null,
      "replyToPreview": null,
      "sendStatus": "sent",
      "senderImageUrl": null,
      "senderName": "Cliente",
      "senderUserId": null,
    },
    {
      "authorType": "human",
      "catalogOrder": null,
      "channelId": "ch_1",
      "content": "Obrigado!",
      "createdAt": "2026-09-30T11:55:00.000Z",
      "direction": "in",
      "id": "wamid.m6",
      "mediaUrl": null,
      "messageType": "text",
      "reactions": [],
      "replyToId": null,
      "replyToPreview": null,
      "sendStatus": "sent",
      "senderImageUrl": null,
      "senderName": "Cliente",
      "senderUserId": null,
    },
  ],
  "pinnedMessageIds": [
    "wamid.m2",
  ],
  "pinnedNoteId": null,
  "session": {
    "active": true,
    "expiresAt": "2026-10-01T11:55:00.000Z",
    "lastInboundAt": "2026-09-30T11:55:00.000Z",
  },
}
`;

exports[`GET /api/conversations/:id/messages — contrato da resposta > histórico (?history=1) com separadores de ticket 1`] = `
{
  "canReply": true,
  "channel": {
    "id": "ch_1",
    "name": "WhatsApp Vendas",
    "phoneNumber": "+5511999990001",
    "type": "WHATSAPP",
  },
  "channelProvider": "META_CLOUD_API",
  "channels": {
    "ch_1": {
      "id": "ch_1",
      "name": "WhatsApp Vendas",
      "phoneNumber": "+5511999990001",
      "type": "WHATSAPP",
    },
  },
  "hasMore": false,
  "hasOlderTickets": false,
  "messages": [
    {
      "content": "{"number":90,"closedAt":"2026-09-27T00:40:00.000Z","openedAt":"2026-09-26T08:00:00.000Z","openedByName":"Sistema","openedByUserId":null,"closedByName":"Sistema","closedByUserId":null}",
      "createdAt": "2026-09-26T08:00:00.000Z",
      "direction": "system",
      "id": "__ticket_sep_conv_resolved",
      "messageType": "ticket-separator",
    },
    {
      "authorType": "human",
      "catalogOrder": null,
      "channelId": "ch_1",
      "content": "Do ticket encerrado",
      "createdAt": "2026-09-26T16:20:00.000Z",
      "direction": "in",
      "id": "wamid.r1",
      "mediaUrl": null,
      "messageType": "text",
      "reactions": [],
      "replyToId": null,
      "replyToPreview": null,
      "sendStatus": "sent",
      "senderName": "Cliente",
      "senderUserId": null,
    },
    {
      "content": "{"number":101,"closedAt":null,"isCurrent":true,"openedAt":"2026-09-30T02:00:00.000Z","openedByName":"Sistema","openedByUserId":null}",
      "createdAt": "2026-09-30T02:00:00.000Z",
      "direction": "system",
      "id": "__ticket_sep_conv_mine",
      "messageType": "ticket-separator",
    },
  ],
  "pinnedMessageIds": [
    "wamid.m2",
  ],
  "pinnedNoteId": null,
  "session": {
    "active": true,
    "expiresAt": "2026-10-01T11:55:00.000Z",
    "lastInboundAt": "2026-09-30T11:55:00.000Z",
  },
}
`;

exports[`GET /api/conversations/:id/messages — contrato da resposta > primeira página: mensagens, fixados, favoritos, avatar, canal, sessão 1`] = `
{
  "canReply": true,
  "channel": {
    "id": "ch_1",
    "name": "WhatsApp Vendas",
    "phoneNumber": "+5511999990001",
    "type": "WHATSAPP",
  },
  "channelProvider": "META_CLOUD_API",
  "channels": {
    "ch_1": {
      "id": "ch_1",
      "name": "WhatsApp Vendas",
      "phoneNumber": "+5511999990001",
      "type": "WHATSAPP",
    },
  },
  "hasMore": false,
  "hasOlderTickets": true,
  "messages": [
    {
      "authorType": "human",
      "catalogOrder": null,
      "channelId": "ch_1",
      "content": "Olá, quero saber do curso",
      "createdAt": "2026-09-30T11:00:00.000Z",
      "direction": "in",
      "id": "wamid.m1",
      "mediaUrl": null,
      "messageType": "text",
      "reactions": [],
      "replyToId": null,
      "replyToPreview": null,
      "sendStatus": "sent",
      "senderImageUrl": null,
      "senderName": "Cliente",
      "senderUserId": null,
    },
    {
      "authorType": "human",
      "catalogOrder": null,
      "channelId": "ch_1",
      "content": "Claro! Qual curso?",
      "createdAt": "2026-09-30T11:01:00.000Z",
      "direction": "out",
      "id": "wamid.m2",
      "mediaUrl": null,
      "messageType": "text",
      "reactions": [],
      "replyToId": null,
      "replyToPreview": null,
      "sendStatus": "read",
      "senderImageUrl": "https://cdn.example.test/u_member.png",
      "senderName": "Ana Lima",
      "senderUserId": null,
      "status": "READ",
    },
    {
      "authorType": "human",
      "catalogOrder": null,
      "channelId": "ch_1",
      "content": "Administração",
      "createdAt": "2026-09-30T11:02:00.000Z",
      "direction": "in",
      "id": "wamid.m3",
      "mediaUrl": null,
      "messageType": "text",
      "reactions": [],
      "replyToId": "wamid.m2",
      "replyToPreview": "Claro! Qual curso?",
      "sendStatus": "sent",
      "senderImageUrl": null,
      "senderName": "Cliente",
      "senderUserId": null,
    },
    {
      "authorType": "human",
      "catalogOrder": null,
      "channelId": "ch_1",
      "content": "Segue a grade",
      "createdAt": "2026-09-30T11:03:00.000Z",
      "direction": "out",
      "favoritedByMe": true,
      "id": "wamid.m4",
      "mediaUrl": null,
      "messageType": "text",
      "reactions": [],
      "replyToId": null,
      "replyToPreview": null,
      "sendStatus": "delivered",
      "senderImageUrl": "https://cdn.example.test/u_member.png",
      "senderName": "Ana Lima",
      "senderUserId": null,
      "status": "DELIVERED",
    },
    {
      "authorType": "system",
      "catalogOrder": null,
      "channelId": null,
      "content": "Conversa atribuída a Ana Lima",
      "createdAt": "2026-09-30T11:04:00.000Z",
      "direction": "system",
      "id": "m5",
      "mediaUrl": null,
      "messageType": "event:atribuicao",
      "reactions": [],
      "replyToId": null,
      "replyToPreview": null,
      "sendStatus": "sent",
      "senderImageUrl": null,
      "senderName": "Sistema",
      "senderUserId": null,
    },
    {
      "authorType": "human",
      "catalogOrder": null,
      "channelId": "ch_1",
      "content": "Obrigado!",
      "createdAt": "2026-09-30T11:55:00.000Z",
      "direction": "in",
      "id": "wamid.m6",
      "mediaUrl": null,
      "messageType": "text",
      "reactions": [],
      "replyToId": null,
      "replyToPreview": null,
      "sendStatus": "sent",
      "senderImageUrl": null,
      "senderName": "Cliente",
      "senderUserId": null,
    },
  ],
  "pinnedMessageIds": [
    "wamid.m2",
  ],
  "pinnedNoteId": null,
  "session": {
    "active": true,
    "expiresAt": "2026-10-01T11:55:00.000Z",
    "lastInboundAt": "2026-09-30T11:55:00.000Z",
  },
}
`;

exports[`GET /api/conversations/:id/messages — contrato da resposta > página anterior (?before) e página nova (?after) > after 1`] = `
{
  "canReply": true,
  "channel": {
    "id": "ch_1",
    "name": "WhatsApp Vendas",
    "phoneNumber": "+5511999990001",
    "type": "WHATSAPP",
  },
  "channelProvider": "META_CLOUD_API",
  "channels": {
    "ch_1": {
      "id": "ch_1",
      "name": "WhatsApp Vendas",
      "phoneNumber": "+5511999990001",
      "type": "WHATSAPP",
    },
  },
  "hasMore": false,
  "hasOlderTickets": true,
  "messages": [
    {
      "authorType": "system",
      "catalogOrder": null,
      "channelId": null,
      "content": "Conversa atribuída a Ana Lima",
      "createdAt": "2026-09-30T11:04:00.000Z",
      "direction": "system",
      "id": "m5",
      "mediaUrl": null,
      "messageType": "event:atribuicao",
      "reactions": [],
      "replyToId": null,
      "replyToPreview": null,
      "sendStatus": "sent",
      "senderImageUrl": null,
      "senderName": "Sistema",
      "senderUserId": null,
    },
    {
      "authorType": "human",
      "catalogOrder": null,
      "channelId": "ch_1",
      "content": "Obrigado!",
      "createdAt": "2026-09-30T11:55:00.000Z",
      "direction": "in",
      "id": "wamid.m6",
      "mediaUrl": null,
      "messageType": "text",
      "reactions": [],
      "replyToId": null,
      "replyToPreview": null,
      "sendStatus": "sent",
      "senderImageUrl": null,
      "senderName": "Cliente",
      "senderUserId": null,
    },
  ],
  "pinnedMessageIds": [
    "wamid.m2",
  ],
  "pinnedNoteId": null,
  "session": {
    "active": true,
    "expiresAt": "2026-10-01T11:55:00.000Z",
    "lastInboundAt": "2026-09-30T11:55:00.000Z",
  },
}
`;

exports[`GET /api/conversations/:id/messages — contrato da resposta > página anterior (?before) e página nova (?after) > before 1`] = `
{
  "canReply": true,
  "channel": {
    "id": "ch_1",
    "name": "WhatsApp Vendas",
    "phoneNumber": "+5511999990001",
    "type": "WHATSAPP",
  },
  "channelProvider": "META_CLOUD_API",
  "channels": {
    "ch_1": {
      "id": "ch_1",
      "name": "WhatsApp Vendas",
      "phoneNumber": "+5511999990001",
      "type": "WHATSAPP",
    },
  },
  "hasMore": true,
  "hasOlderTickets": false,
  "messages": [
    {
      "authorType": "human",
      "catalogOrder": null,
      "channelId": "ch_1",
      "content": "Administração",
      "createdAt": "2026-09-30T11:02:00.000Z",
      "direction": "in",
      "id": "wamid.m3",
      "mediaUrl": null,
      "messageType": "text",
      "reactions": [],
      "replyToId": "wamid.m2",
      "replyToPreview": "Claro! Qual curso?",
      "sendStatus": "sent",
      "senderImageUrl": null,
      "senderName": "Cliente",
      "senderUserId": null,
    },
    {
      "authorType": "human",
      "catalogOrder": null,
      "channelId": "ch_1",
      "content": "Segue a grade",
      "createdAt": "2026-09-30T11:03:00.000Z",
      "direction": "out",
      "favoritedByMe": true,
      "id": "wamid.m4",
      "mediaUrl": null,
      "messageType": "text",
      "reactions": [],
      "replyToId": null,
      "replyToPreview": null,
      "sendStatus": "delivered",
      "senderImageUrl": "https://cdn.example.test/u_member.png",
      "senderName": "Ana Lima",
      "senderUserId": null,
      "status": "DELIVERED",
    },
  ],
  "pinnedMessageIds": [
    "wamid.m2",
  ],
  "pinnedNoteId": null,
  "session": {
    "active": true,
    "expiresAt": "2026-10-01T11:55:00.000Z",
    "lastInboundAt": "2026-09-30T11:55:00.000Z",
  },
}
`;

exports[`GET /api/conversations/:id/messages — contrato da resposta > timeline unificada com o ticket ativo do mesmo contato+canal 1`] = `
{
  "canReply": true,
  "channel": {
    "id": "ch_1",
    "name": "WhatsApp Vendas",
    "phoneNumber": "+5511999990001",
    "type": "WHATSAPP",
  },
  "channelProvider": "META_CLOUD_API",
  "channels": {
    "ch_1": {
      "id": "ch_1",
      "name": "WhatsApp Vendas",
      "phoneNumber": "+5511999990001",
      "type": "WHATSAPP",
    },
  },
  "hasMore": false,
  "hasOlderTickets": true,
  "messages": [
    {
      "authorType": "human",
      "catalogOrder": null,
      "channelId": "ch_1",
      "content": "Do ticket irmão",
      "createdAt": "2026-09-30T10:30:00.000Z",
      "direction": "in",
      "id": "wamid.s1",
      "mediaUrl": null,
      "messageType": "text",
      "reactions": [],
      "replyToId": null,
      "replyToPreview": null,
      "sendStatus": "sent",
      "senderImageUrl": null,
      "senderName": "Cliente",
      "senderUserId": null,
    },
    {
      "authorType": "human",
      "catalogOrder": null,
      "channelId": "ch_1",
      "content": "Olá, quero saber do curso",
      "createdAt": "2026-09-30T11:00:00.000Z",
      "direction": "in",
      "id": "wamid.m1",
      "mediaUrl": null,
      "messageType": "text",
      "reactions": [],
      "replyToId": null,
      "replyToPreview": null,
      "sendStatus": "sent",
      "senderImageUrl": null,
      "senderName": "Cliente",
      "senderUserId": null,
    },
    {
      "authorType": "human",
      "catalogOrder": null,
      "channelId": "ch_1",
      "content": "Claro! Qual curso?",
      "createdAt": "2026-09-30T11:01:00.000Z",
      "direction": "out",
      "id": "wamid.m2",
      "mediaUrl": null,
      "messageType": "text",
      "reactions": [],
      "replyToId": null,
      "replyToPreview": null,
      "sendStatus": "read",
      "senderImageUrl": "https://cdn.example.test/u_member.png",
      "senderName": "Ana Lima",
      "senderUserId": null,
      "status": "READ",
    },
    {
      "authorType": "human",
      "catalogOrder": null,
      "channelId": "ch_1",
      "content": "Administração",
      "createdAt": "2026-09-30T11:02:00.000Z",
      "direction": "in",
      "id": "wamid.m3",
      "mediaUrl": null,
      "messageType": "text",
      "reactions": [],
      "replyToId": "wamid.m2",
      "replyToPreview": "Claro! Qual curso?",
      "sendStatus": "sent",
      "senderImageUrl": null,
      "senderName": "Cliente",
      "senderUserId": null,
    },
    {
      "authorType": "human",
      "catalogOrder": null,
      "channelId": "ch_1",
      "content": "Segue a grade",
      "createdAt": "2026-09-30T11:03:00.000Z",
      "direction": "out",
      "favoritedByMe": true,
      "id": "wamid.m4",
      "mediaUrl": null,
      "messageType": "text",
      "reactions": [],
      "replyToId": null,
      "replyToPreview": null,
      "sendStatus": "delivered",
      "senderImageUrl": "https://cdn.example.test/u_member.png",
      "senderName": "Ana Lima",
      "senderUserId": null,
      "status": "DELIVERED",
    },
    {
      "authorType": "system",
      "catalogOrder": null,
      "channelId": null,
      "content": "Conversa atribuída a Ana Lima",
      "createdAt": "2026-09-30T11:04:00.000Z",
      "direction": "system",
      "id": "m5",
      "mediaUrl": null,
      "messageType": "event:atribuicao",
      "reactions": [],
      "replyToId": null,
      "replyToPreview": null,
      "sendStatus": "sent",
      "senderImageUrl": null,
      "senderName": "Sistema",
      "senderUserId": null,
    },
    {
      "authorType": "human",
      "catalogOrder": null,
      "channelId": "ch_1",
      "content": "Obrigado!",
      "createdAt": "2026-09-30T11:55:00.000Z",
      "direction": "in",
      "id": "wamid.m6",
      "mediaUrl": null,
      "messageType": "text",
      "reactions": [],
      "replyToId": null,
      "replyToPreview": null,
      "sendStatus": "sent",
      "senderImageUrl": null,
      "senderName": "Cliente",
      "senderUserId": null,
    },
  ],
  "pinnedMessageIds": [
    "wamid.m2",
  ],
  "pinnedNoteId": null,
  "session": {
    "active": true,
    "expiresAt": "2026-10-01T11:55:00.000Z",
    "lastInboundAt": "2026-09-30T11:55:00.000Z",
  },
}
`;
